deployment/infrastructure/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /control
        pathType: Prefix
        backend:
          service:
            name: com-control
            port:
              number: 80
      - path: /hive
        pathType: Prefix
        backend:
          service:
            name: hive-mind
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: map-client
            port:
              number: 80
